--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Practica de Diseño</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Práctica de Diseño</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <!-- Header -->
     <header class="header">
       <h1>Mi Sitio Web</h1>
       <nav class="nav">
@@ -16,29 +17,57 @@
       </nav>
     </header>
 
+    <!-- Hero Section -->
     <section class="hero">
       <h2>Bienvenidos a mi sitio</h2>
       <p>Explora los servicios que ofrecemos.</p>
       <button class="primary-btn">Saber Más</button>
     </section>
 
-    <section class="cards">
-      <div class="card">
-        <h3>Servicio 1</h3>
-        <p>Descripción del servicio 1.</p>
-      </div>
-      <div class="card">
-        <h3>Servicio 2</h3>
-        <p>Descripción del servicio 2.</p>
-      </div>
-      <div class="card">
-        <h3>Servicio 3</h3>
-        <p>Descripción del servicio 3.</p>
-      </div>
-    </section>
+    <!-- Main Content -->
+    <main>
+      <section class="cards">
+        <div class="card">
+          <h3>Servicio 1</h3>
+          <p>Descripción del servicio 1.</p>
+        </div>
+        <div class="card">
+          <h3>Servicio 2</h3>
+          <p>Descripción del servicio 2.</p>
+        </div>
+        <div class="card">
+          <h3>Servicio 3</h3>
+          <p>Descripción del servicio 3.</p>
+        </div>
+      </section>
 
+      <!-- Articles Section -->
+      <section class="articles">
+        <h2>Últimos Artículos</h2>
+        <article>
+          <h3>Cómo mejorar tu productividad</h3>
+          <p>Descubre consejos útiles para ser más productivo.</p>
+        </article>
+        <article>
+          <h3>Tecnologías emergentes</h3>
+          <p>Una mirada a las tecnologías que cambiarán el futuro.</p>
+        </article>
+      </section>
+    </main>
+
+    <!-- Sidebar -->
+    <aside class="sidebar">
+      <h3>Información Adicional</h3>
+      <ul>
+        <li><a href="#">Acerca de nosotros</a></li>
+        <li><a href="#">Preguntas Frecuentes</a></li>
+        <li><a href="#">Política de Privacidad</a></li>
+      </ul>
+    </aside>
+
+    <!-- Footer -->
     <footer class="footer">
-      <p>&copy; 2024 Mi Sitio Web</p>
+      <p>&copy; 2025 Mi Sitio Web</p>
     </footer>
   </body>
 </html>
